# yew_translator

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: pull-request.yml  push.yml
src/: lib.rs
src/i18n/: mod.rs  provider.rs  use_translation.rs
src/templater/: errors.rs  generate.rs  mod.rs  options.rs  parse_to_hashmap.rs
