[package]
name = "yew_translator"
description = "A i18n implementation for yew using a string templater."
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/FriquetLuca/yew_translator"
keywords = ["yew", "rust", "i18n", "translation", "template"]
categories = ["web-programming", "internationalization", "accessibility", "localization"]
authors = ["Mahmoud Harmouch <oss@wiseai.dev>", "Friquet Luca"]

[lib]
name = "yew_translator"
path = "src/lib.rs"

[dependencies]
yew = { version = "0.21", features = ["csr"], optional = true }
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
thiserror = "1"

[features]
default = ["yew-i18n", "translation_templater"]
yew-i18n = ["dep:yew"]
translation_templater = []
