[package]
name = "yew_translator"
description = "A i18n implementation for yew using string templaters."
license = "MIT OR Apache-2.0"
version = "1.0.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/FriquetLuca/yew_translator"
keywords = ["yew", "handlebars", "i18n", "translation", "template"]
categories = ["web-programming", "internationalization", "accessibility", "localization"]
authors = ["Mahmoud Harmouch <oss@wiseai.dev>", "Friquet Luca"]

[lib]
name = "yew_translator"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
yew = { version = "0.21", optional = true }
handlebars = { version = "6.0.0", optional = true }
thiserror = { version = "1", optional = true }

[features]
default = ["yew-i18n", "handlebars", "translation_templater", "export_translation_templater"]
yew-i18n = ["dep:yew"]
handlebars = ["dep:handlebars"]
translation_templater = ["dep:thiserror"]
export_translation_templater = ["translation_templater"]
